--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "xaosts",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "bun@1.3.8",
   "type": "module",
+  "workspaces": ["apps/*", "packages/*"],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "typecheck": "tsc --noEmit",
-    "test": "vitest run"
+    "dev": "turbo run dev --filter=@xaosts/web",
+    "dev:web": "turbo run dev --filter=@xaosts/web",
+    "build": "turbo run build",
+    "build:web": "turbo run build --filter=@xaosts/web",
+    "typecheck": "turbo run typecheck",
+    "test": "turbo run test",
+    "test:smoke": "turbo run test:smoke --filter=@xaosts/web",
+    "test:core": "turbo run test --filter=@xaosts/core"
   },
   "devDependencies": {
+    "turbo": "^2.0.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.0",
     "vitest": "^3.2.4"
